Archive2/aa/516c4c5d51fdef/output
main.cpp: In function 'int main(int, char**)':
main.cpp:17:20: error: 'STATE1' was not declared in this scope
     if (s.state == STATE1) {
                    ^
